[gd_scene load_steps=12 format=3 uid="uid://csn8we332roa1"]

[ext_resource type="Script" path="res://src/entities/items/base_templates/base_item/base_item.gd" id="1"]
[ext_resource type="Script" path="res://src/scripts/AnimationMachine.gd" id="2"]
[ext_resource type="Script" path="res://src/scripts/StatesMachine.gd" id="2_mkblv"]
[ext_resource type="Script" path="res://src/scripts/SoundMachine.gd" id="3"]
[ext_resource type="Script" path="res://src/entities/items/base_templates/base_item/states/Dropped.gd" id="3_8j8cn"]
[ext_resource type="Script" path="res://src/entities/items/base_templates/base_item/states/Idle.gd" id="3_wtx13"]
[ext_resource type="PackedScene" uid="uid://dxr06pe6sxdw7" path="res://src/components/pickup_range/PickUpRange.tscn" id="4"]
[ext_resource type="Script" path="res://src/entities/items/base_templates/base_item/states/Disabled.gd" id="4_ee0ll"]
[ext_resource type="Script" path="res://addons/mixing-desk/sound/2d/ran_cont.gd" id="7"]
[ext_resource type="AudioStream" uid="uid://ckhrgsqgv010y" path="res://sounds/pickup/Pop 31.wav" id="10_tvo8m"]
[ext_resource type="AudioStream" uid="uid://2k0v4wbc3cbc" path="res://sounds/pickup/Pop 41.wav" id="11_oah26"]

[node name="BaseItem" type="Node2D" groups=["ITEM"]]
script = ExtResource("1")
despawn_time = 20

[node name="Marker2D" type="Marker2D" parent="."]

[node name="StateMachine" type="Node" parent="Marker2D"]
script = ExtResource("2_mkblv")
initial_state = NodePath("Dropped")

[node name="Dropped" type="Node" parent="Marker2D/StateMachine"]
script = ExtResource("3_8j8cn")

[node name="Disabled" type="Node" parent="Marker2D/StateMachine"]
script = ExtResource("4_ee0ll")

[node name="Idle" type="Node" parent="Marker2D/StateMachine"]
script = ExtResource("3_wtx13")

[node name="PickUpRange" parent="Marker2D" instance=ExtResource("4")]

[node name="Visuals" type="Node2D" parent="Marker2D"]

[node name="Sprite2D" type="Sprite2D" parent="Marker2D/Visuals"]

[node name="AnimationMachine" type="Node" parent="Marker2D"]
script = ExtResource("2")

[node name="SoundMachine" type="Node2D" parent="Marker2D"]
script = ExtResource("3")

[node name="ItemDrop" type="Node2D" parent="Marker2D/SoundMachine"]
script = ExtResource("7")
pitch_range = 0.2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Marker2D/SoundMachine/ItemDrop"]

[node name="Pickup" type="Node2D" parent="Marker2D/SoundMachine"]
script = ExtResource("7")
pitch_range = 0.05

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Marker2D/SoundMachine/Pickup"]
stream = ExtResource("10_tvo8m")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="Marker2D/SoundMachine/Pickup"]
stream = ExtResource("11_oah26")
